@startuml

title __MODELS's Class Diagram__\n

  namespace  {
    namespace om.pos {
      namespace models {
        class com.pos.models.InvoiceEntity {
            + hora : String
            + id : int
            + lines : List<LineEntity>
            + equals()
            + getHora()
            + getId()
            + getLines()
            + hashCode()
            + setHora()
            + setId()
            + setLines()
        }
      }
    }
  }
  

  namespace  {
    namespace om.pos {
      namespace models {
        class com.pos.models.LineEntity {
            + cant : int
            + id : int
            + total : int
            + equals()
            + getCant()
            + getId()
            + getInvoice()
            + getProduct()
            + getTotal()
            + hashCode()
            + setCant()
            + setId()
            + setInvoice()
            + setProduct()
            + setTotal()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.pos {
      namespace models {
        class com.pos.models.ProductoEntity {
            + id : int
            + imagen : String
            + nombre : String
            + precio : int
            + stock : int
            + type : String
            + equals()
            + getId()
            + getImagen()
            + getLine()
            + getNombre()
            + getPrecio()
            + getStock()
            + getType()
            + hashCode()
            + setId()
            + setImagen()
            + setLine()
            + setNombre()
            + setPrecio()
            + setStock()
            + setType()
            + toString()
        }
      }
    }
  }
  

  com.pos.models.LineEntity o-- com.pos.models.InvoiceEntity : invoice
  com.pos.models.LineEntity o-- com.pos.models.ProductoEntity : producto
  com.pos.models.ProductoEntity o-- com.pos.models.LineEntity : line


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
